--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.17.1",
     "handlebars": "^4.1.2",
     "hbs": "^4.0.4",
-    "stripe": "^7.4.0"
+    "stripe": "^7.4.0",
+    "body-parser": "latest"
   }
 }
